Fix text alignment in sidebar buttons

--- a/frontend/src/components/atoms/NavBarTabItem/style.module.scss
+++ b/frontend/src/components/atoms/NavBarTabItem/style.module.scss
@@ -5,7 +5,7 @@
     background: $gray-100;
     border-radius: 8px !important;
     font-family: "IBM Plex Sans";
-    font-size: 18px;
+    font-size: 17px;
     color: $black !important;
     text-align: center;
     line-height: 22px;
